Improve navigation UX in file picker popup

--- a/engine/src/main/resources/assets/ui/menu/filePickerPopup.ui
+++ b/engine/src/main/resources/assets/ui/menu/filePickerPopup.ui
@@ -44,6 +44,10 @@
                             ]
                         },
                         {
+                            "type": "UILabel",
+                            "id": "currentPath"
+                        },
+                        {
                             "type": "ScrollableArea",
                             "content": {
                                 "type": "UIList",
