Fix file picker layout by adding preferred size to ScrollableArea

--- a/engine/src/main/resources/assets/ui/menu/filePickerPopup.ui
+++ b/engine/src/main/resources/assets/ui/menu/filePickerPopup.ui
@@ -49,6 +49,7 @@
                         },
                         {
                             "type": "ScrollableArea",
+                            "preferredHeight": 350,
                             "content": {
                                 "type": "UIList",
                                 "id": "directoryContentsList"
