Implement identity export feature

--- a/engine/src/main/resources/assets/ui/menu/filePickerPopup.ui
+++ b/engine/src/main/resources/assets/ui/menu/filePickerPopup.ui
@@ -49,6 +49,7 @@
                         },
                         {
                             "type": "ScrollableArea",
+                            "id": "directoryContentsScroller",
                             "preferredHeight": 350,
                             "content": {
                                 "type": "UIList",
